Fix dialog on mobile devices.

--- a/client/post-editor/style.scss
+++ b/client/post-editor/style.scss
@@ -1,9 +1,14 @@
 .dialog.verification-modal {
-	max-width: 475px;
+	max-width: 575px;
 
 	h1 {
 		height: auto;
 		min-height: 2em;
+		line-height: 1.3;
+	}
+
+	@include breakpoint( "<660px" ) {
+		max-width: 100%;
 	}
 }
 
